crates/plotnik-tests/tests/02-parser/recovery_validation/negated_field_as_field_value.txt
Q = (pair key: -value)
------------------ DIAGNOSTICS -------------------
error: a negated field cannot be a field value
 --> query.ptk:1:16
  |
1 | Q = (pair key: -value)
  |                ^^^^^^
  |
help: a negated field stands alone as a child: `(node -field)`
